...
        final currentCity =
            cities.where((c) => c.slug == selectedCity).firstOrNull;
        if (currentCity != null) {
          cityName = currentCity.nameRu;
        } else {
          if (selectedCity == 'kaliningrad_city') {
            cityName = 'Калининград';
          } else if (selectedCity == 'kaliningrad_oblast') {
            cityName = 'Калининградская область';
          }
        }

        return Scaffold(
...
